--- a/views/vista1.ejs
+++ b/views/vista1.ejs
@@ -8,13 +8,8 @@
  
     </head>
     <body>
-        <header>Loging</header>
-        <form enctype="text/plain" method="POST" action="index.php">
-            Username:<input type="text" name="user" placeholder="user" minlength="10" required=true><br></br>
-             Password:<input type="password" name="direccion" placeholder="Password" minlength="10" required=true><br></br>
-             Correo:<input type="email" name="correo" placeholder="E-mail" minlength="20" required=true><br></br>
-        <button  name="button" >Ingresar</button>
-        </form>
+        <header>NEGRA DE MIERDA, SEBAS FIRMA A TU IJO CONCHETUMARE</header>
+        
     </body>
     <style>
             header{
